welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:31: error: not found: value COlor
  faireV(COlor.GREEN)
         ^